k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plantjournal-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plantjournal
      component: frontend
  template:
    metadata:
      labels:
        app: plantjournal
        component: frontend
    spec:
      containers:
      - name: plantjournal-frontend-container
        image: 417425906408.dkr.ecr.us-east-1.amazonaws.com/plantjournal-frontend:latest
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: plantjournal-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plantjournal
      component: backend
  template:
    metadata:
      labels:
        app: plantjournal
        component: backend
    spec:
      serviceAccountName: plantjournal-sa
      containers:
      - name: plantjournal-backend-container
        image: 417425906408.dkr.ecr.us-east-1.amazonaws.com/plantjournal-backend:latest
