k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plantjournal-frontend-service
spec:
  type: LoadBalancer
  selector:
    app: plantjournal
    component: frontend
  ports:
    - port: 80
      targetPort: 80



---
apiVersion: v1
kind: Service
metadata:
  name: plantjournal-backend-service
spec:
  type: ClusterIP
  selector:
    app: plantjournal
    component: backend
  ports:
    - port: 3000
      targetPort: 3000
